# PointCloud

./: .gitignore  CMakeLists.txt  README.md  test.ply
include/: camera.hpp  main.hpp  point_cloud.hpp  program.hpp  renderer.hpp  shader.hpp
src/: camera.cpp  main.cpp  point_cloud.cpp  program.cpp  renderer.cpp  shader.cpp
